@@ -10,8 +10,8 @@
   <configure name="VERSION" value="6.7.2"/>
   <configure name="LIB_VERSION" value="0x672"/>
   <configure name="LIB_VERSION_NUMBER" value="6,7,2,6"/>
-  <configure name="SVN_REVISION" value="5245" />
-  <configure name="RELEASE_DATE" value="2011-09-12"/>
+  <configure name="SVN_REVISION" value="5289" />
+  <configure name="RELEASE_DATE" value="2011-09-13"/>
   <configure name="CONFIGURE" value="./configure "/>
   <configure name="PREFIX" value="/usr/local"/>
   <configure name="EXEC-PREFIX" value="/usr/local"/>
