@@ -6,6 +6,8 @@
   * Gray images not displayed properly when saved as MIFF with sRGB
     colorspace.
   * OpenCL's clCreateContextFromType() no longer returns a system default.
+  * Use -enable-zero-configuration for zero configuration ImageMagick
+    (previously -enable-embeddable).
 
 2011-09-10  6.7.2-5 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.2-5.
